--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
 
       # Extract version from package.json
       - id: pkg
-        run: echo "::set-output name=version::$(node -p "require('./package.json').version")"
+        run: echo "{version}={$(node -p "require('./package.json').version")}" >> $GITHUB_OUTPUT
 
       # Check if tag already exists
       - name: Check if tag exists
