--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,12 +37,15 @@ jobs:
       - name: Build Project
         run: npm run build
 
+      - name: Archive output directory
+        run: zip -r build.zip build/
+
       # Create a GitHub release
       - name: Create Release
         id: create_release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: 'build/*'
+          artifacts: 'build.zip'
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: v${{ steps.pkg.outputs.version }}
           name: Release v${{ steps.pkg.outputs.version }}
