--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,14 +23,14 @@ jobs:
         run: npm ci
 
       # Extract version from package.json
-      - id: pkg
-        run: echo "{version}={$(node -p "require('./package.json').version")}" >> $GITHUB_OUTPUT
+      - id: pkg_version
+        run: echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
 
       # Check if tag already exists
       - name: Check if tag exists
         run: |
-          if git rev-parse "v${{ steps.pkg.outputs.version }}" >/dev/null 2>&1; then
-            echo "Tag v${{ steps.pkg.outputs.version }} already exists!"
+          if git rev-parse "v${{ steps.pkg_version.outputs.version }}" >/dev/null 2>&1; then
+            echo "Tag v${{ steps.pkg_version.outputs.version }} already exists!"
             exit 1
           fi
 
@@ -47,7 +47,7 @@ jobs:
         with:
           artifacts: 'build.zip'
           token: ${{ secrets.GITHUB_TOKEN }}
-          tag: v${{ steps.pkg.outputs.version }}
-          name: Release v${{ steps.pkg.outputs.version }}
+          tag: v${{ steps.pkg_version.outputs.version }}
+          name: Release v${{ steps.pkg_version.outputs.version }}
           draft: false
           prerelease: false
