--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
 name: Release
 
-# manual release
 on:
-  workflow_dispatch:
+  push:
+    tags:
+      - '*'
 
 jobs:
   release:
@@ -22,18 +23,6 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      # Extract version from package.json
-      - id: pkg_version
-        run: echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
-
-      # Check if tag already exists
-      - name: Check if tag exists
-        run: |
-          if git rev-parse "v${{ steps.pkg_version.outputs.version }}" >/dev/null 2>&1; then
-            echo "Tag v${{ steps.pkg_version.outputs.version }} already exists!"
-            exit 1
-          fi
-
       - name: Build Project
         run: npm run build
 
@@ -47,7 +36,5 @@ jobs:
         with:
           artifacts: 'build.zip'
           token: ${{ secrets.GITHUB_TOKEN }}
-          tag: v${{ steps.pkg_version.outputs.version }}
-          name: Release v${{ steps.pkg_version.outputs.version }}
           draft: false
           prerelease: false
